--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,7 +1,7 @@
 name: Generate Datas
 
 on:
-  schedule: # execute every 6 hours
+  schedule: # execute every 12 hours
     - cron: "* */6 * * *"
   workflow_dispatch:
 
@@ -14,7 +14,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: Luiz-Souza0
+          github_user_name: Pleiterson
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
@@ -23,4 +23,3 @@ jobs:
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
